--- a/static/css/page.css
+++ b/static/css/page.css
@@ -130,11 +130,9 @@
 .loginPage fieldset ul li input:not([type="submit"]),
 .loginPage fieldset ul li select{height: 40px; border: 1px solid #cacaca; padding: 0 15px; box-sizing: border-box;}
 .loginPage fieldset ul li select{background: url('../images/selectIcon.png') no-repeat right 10px center;}
-/*.loginPage fieldset ul li > input[type="password"] { font-family: Serif; }*/
 .loginPage fieldset ul li > input:not([type="submit"]),
-.loginPage fieldset ul li > select{width: 100%; }
+.loginPage fieldset ul li > select{width: 100%;}
 .loginPage fieldset ul li input:not([type="submit"])::placeholder{font-size: 16px; color: #888888;}
-
 
 /* 로그인 페이지 */
 .loginArea{width: 400px;}
@@ -145,18 +143,14 @@
 .loginArea fieldset p mark{display: block; text-align: center; font-weight: 800;}
 .loginArea fieldset p:last-of-type mark a{text-decoration: underline;}
 
+
 /* 아이디 비밀번호 찾기 페이지 */
 .findArea > div{display: flex; justify-content: space-between; }
 .findArea > div fieldset legend{margin-bottom: 20px;}
 .findArea > div fieldset > div{width: 580px; border: 1px solid #e0e0e0; padding: 50px 90px; box-sizing: border-box; text-align: center;}
 .findArea > div fieldset > div button{width: 125px; height: 45px; background-color: black; font-size: 18px; font-weight: 800; color: white;}
 
-.find_popup{display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 100; justify-content: center; align-items: center; background-color: rgba(0, 0, 0, 0.8);}
-.find_popup.active{display: flex;}
-.find_popup > div{width: 360px; padding: 80px 20px 40px; background-color: white; box-sizing: border-box; position: relative;}
-.find_popup > div strong{display: block; font-size: 20px; font-weight: 800; text-align: left; margin-bottom: 20px;}
 
-.find_popup .closeBtn{position: absolute; right: 20px; top: 20px; font-size: 40px; cursor: pointer;}
 
 
 /* 회원가입 페이지 */
@@ -268,10 +262,184 @@
 .tolkBox .tolkDetail .tolkArea > span time{font-size: 14px; color: #bbbbbb; position: relative; z-index: 1; display: inline-block; padding: 0 20px; background-color: white;}
 
 .tolkBox .tolkDetail .inputArea{margin-top: auto; padding: 20px; display: flex; min-height: 40px;}
-.tolkBox .tolkDetail .inputArea input{height: 100%; border: 1px solid #cacaca; border-radius: 11px; margin-right: 15px; padding: 14px 15px; box-sizing: border-box; flex: 1; width: 0;}
-.tolkBox .tolkDetail .inputArea button{height: 100%; width: 115px; display: flex; justify-content: center; align-items: center;  font-weight: 700; color: #ff9900; border: 1px solid #ff9900;  }
+.tolkBox .tolkDetail .inputArea input{height: 100%; border: 1px solid #cacaca; padding: 0 15px; box-sizing: border-box; flex: 1; width: 0;}
+.tolkBox .tolkDetail .inputArea button{height: 100%; width: 115px; display: flex; justify-content: center; align-items: center;  font-weight: 700; color: #ff9900; border: 1px solid #ff9900;}
 .tolkBox .tolkDetail .inputArea button::before{content: ''; width: 22px; height: 22px; background: url('../images/inputIcon.png') no-repeat center / cover; margin-right: 25px;}
 
 
 
+/* 원룸 */
 
+.oneRoomArea{padding-top: 121px;}
+.oneRoomArea .contArea{/* width: 1920px; margin: 0 auto; */ min-width: 1400px; height: calc((100vh - 121px)); display: flex;}
+/* .oneRoomArea .contArea::after{content: ''; display: block; clear: both;} */
+/* .oneRoomArea .contArea > *{float: left;} */
+
+/* 원룸 페이지 지도 */
+.oneRoomArea .contArea .mapArea{width: calc(100% - 720px); height: 100%; position: relative;}
+/* 검색바 search_bar */
+.oneRoomArea .contArea .mapArea .inputArea{position: absolute; left: 15px; top: 20px; padding: 20px; height: 85px; background-color: white; border: 1px solid #dadada; display: flex; z-index: 2;}
+.oneRoomArea .contArea .mapArea .inputArea div{position: relative; height: 100%;}
+.oneRoomArea .contArea .mapArea .inputArea div input{width: 323px; height: 100%; border: 2px solid #ff9900; box-sizing: border-box;}
+.oneRoomArea .contArea .mapArea .inputArea div button{position: absolute; top:12px; right: 11px; width: 19px; height: 19px; background: url('../images/oneroom_search.png') no-repeat center / cover;}
+.oneRoomArea .contArea .mapArea .inputArea > button{width: 100px; height: 100%; border: 1px solid #d2d2d2; font-size: 18px; color: #888888; display: flex; justify-content: center; align-items: center; margin-left: 20px;}
+.oneRoomArea .contArea .mapArea .inputArea > button:nth-of-type(1)::before{content: ''; width: 21px; height: 17px; background: url('../images/oneroom_filter.png') no-repeat center / cover; margin-right: 17px;}
+/* iframe */
+.oneRoomArea .contArea .mapArea .myMap{width: 100%; height: 100%;}
+
+/* 원룸 페이지 리스트 공통 */
+.oneRoomArea .contArea .listArea{width: 720px; display: flex; flex-direction: column; position: relative;}
+.oneRoomArea .contArea .listArea .textArea{padding: 0 30px; flex: 1;}
+.oneRoomArea .contArea .listArea .textArea strong{display: block; font-size: 20px; font-weight: 700; margin-bottom: 10px;}
+.oneRoomArea .contArea .listArea .textArea strong small{display: block; font-size: 14px; color: #888888; margin-bottom: 10px;}
+.oneRoomArea .contArea .listArea .textArea p{color: #555555; line-height: 22px;}
+.oneRoomArea .contArea .listArea .textArea div{display: flex;}
+
+/* 원룸 페이지 리스트 상단 */
+.oneRoomArea .contArea .listArea .topArea > p{font-size: 20px; line-height: 74px; padding: 0 20px;}
+.oneRoomArea .contArea .listArea .topArea > select{position: absolute; right: 20px; top: 16px; width: 130px; height: 40px; border: 1px solid #cacaca; padding: 0 10px; background: url('../images/oneroom_selectIcon.png') no-repeat right 10px top 15px;}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea{display: flex; align-items: center; border-width: 1px 0; border-style: solid; border-color: #dadada;}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea .imgArea{width: 260px; height: 177px; display: flex; flex-wrap: wrap; justify-content: space-between; align-content: space-between;}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea .imgArea .imgBox{width: calc((100% - 1px) / 2); height: calc((100% - 1px) / 2);}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea .textArea p{margin-bottom: 25px;}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea .textArea div{flex-wrap: wrap;}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea .textArea div dl{width: 190px; display: flex; font-size: 14px;}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea .textArea div dl:not(:nth-child(-n + 2)){margin-top: 10px;}
+.oneRoomArea .contArea .listArea .topArea .suggestionArea .textArea div dl dd{margin-left: 5px; font-weight: 700;}
+
+/* 원룸 페이지 리스트 하단 */
+.oneRoomArea .contArea .listArea .bottomArea{flex: 1; height: 0; overflow: hidden;}
+.oneRoomArea .contArea .listArea .bottomArea ul{ padding: 20px; width: calc(100% + 15px); height: 100%; overflow: auto; box-sizing: border-box;}
+.oneRoomArea .contArea .listArea .bottomArea ul li:not(:last-child){margin-bottom: 20px;}
+.oneRoomArea .contArea .listArea .bottomArea ul li a{display: flex; align-items: flex-end;}
+.oneRoomArea .contArea .listArea .bottomArea ul li a .imgBox{ width: 240px; height: 160px; border: 1px solid #b8b8b8;}
+.oneRoomArea .contArea .listArea .bottomArea ul li a .textArea{}
+.oneRoomArea .contArea .listArea .bottomArea ul li a .textArea p:last-of-type{margin-bottom: 15px;}
+.oneRoomArea .contArea .listArea .bottomArea ul li a .textArea div{display: flex;}
+.oneRoomArea .contArea .listArea .bottomArea ul li a .textArea div span{font-size: 15px; line-height: 30px; padding: 0 10px; background-color: #ffefd8;}
+.oneRoomArea .contArea .listArea .bottomArea ul li a .textArea div span::before{content: '#';}
+.oneRoomArea .contArea .listArea .bottomArea ul li a .textArea div span:not(:last-child){margin-right: 10px;}
+
+
+/* 원룸 - 상세페이지 */
+.oneRoomPage .detailArea h3{font-size: 26px; font-weight: 800; margin-bottom: 20px;}
+.oneRoomPage .detailArea > *:not(:first-child){margin-bottom: 80px;}
+
+/* 원룸 - 상세페이지 - 테이블 */
+.oneRoomPage .detailArea{margin-bottom: 40px;}
+.oneRoomPage .detailArea table{width: 100%; border: 1px solid #e0e0e0;}
+.oneRoomPage .detailArea table tr:first-child > *{height: 80px;}
+.oneRoomPage .detailArea table tr:first-child > * > *{height: 80px; display: flex; align-items: center; padding: 0 20px;}
+.oneRoomPage .detailArea table tr:not(:first-child){line-height: 55px; text-align: center; border-top: 1px solid #e0e0e0;}
+.oneRoomPage .detailArea table tr:not(:first-child) > *{width: 12.5%;}
+.oneRoomPage .detailArea table tr > *:not(:last-child){border-right: 1px solid #e0e0e0;}
+.oneRoomPage .detailArea table tr th{background-color: #f0f0f0;}
+.oneRoomPage .detailArea table tr td{background-color: #f5f5f5;}
+
+.oneRoomPage .detailArea table tr:first-child td:last-child > *{justify-content: flex-end;}
+.oneRoomPage .detailArea table tr:first-child td:last-child > * p{margin-right: auto;}
+
+.oneRoomPage .detailArea table tr:first-child > * strong{font-size: 26px; font-weight: 800;}
+.oneRoomPage .detailArea table tr:first-child > * strong b{font-size: 20px; display: inline-block; margin-left: 15px;}
+.oneRoomPage .detailArea table tr:first-child > * p{font-size: 18px;}
+.oneRoomPage .detailArea table tr:first-child > * p small{font-size: 14px; color: #555555; display: block; margin-bottom: 10px;}
+.oneRoomPage .detailArea table tr:first-child > * p mark{color: #df2c27;}
+.oneRoomPage .detailArea table tr:first-child > * > * > button{width: 145px; height: 45px; border: 1px solid #d2d2d2; box-sizing: border-box; display: flex; align-items: center; justify-content: center; font-size: 18px; font-weight: 700; color: #888888;}
+.oneRoomPage .detailArea table tr:first-child > * > * > button::before{content: ''; width: 20px; height: 25px; background-repeat: no-repeat; background-position: center; background-size: cover; margin-right: 12px;} 
+.oneRoomPage .detailArea table tr:first-child > * > * > button:nth-of-type(1)::before{background-image: url('../images/oneroom_detailBtn01.png');}
+.oneRoomPage .detailArea table tr:first-child > * > * > button:nth-of-type(2)::before{background-image: url('../images/oneroom_detailBtn02.png');}
+.oneRoomPage .detailArea table tr:first-child > * > * > button:not(:last-of-type){margin-right: 10px;}
+
+/* 원룸 - 상세페이지 - 옵션 */
+.oneRoomPage .detailArea > ul{display: flex; flex-wrap: wrap; border: 1px solid #b8b8b8;}
+.oneRoomPage .detailArea > ul li{width: calc((100% - 1px) / 2); height: 400px; position: relative;}
+.oneRoomPage .detailArea > ul li:nth-child(2n + 1){border-right: 1px solid #b8b8b8;}
+.oneRoomPage .detailArea > ul li .imgBox{height: 100%;}
+.oneRoomPage .detailArea > ul li button{position: absolute; left: calc(50% - 75px); top: calc(50% - 25px); width: 150px; height: 50px; display: none; justify-content: center; align-items: center; z-index: 1; background-color: black; color: white;}
+.oneRoomPage .detailArea > ul li button::after{content: '+'; font-weight: 900; margin-left: 30px;}
+.oneRoomPage .detailArea > ul li:hover .imgBox{filter: blur(10px);}
+.oneRoomPage .detailArea > ul li:hover button{display: flex;}
+
+.oneRoomPage .detailArea .optionBox{display: flex; flex-wrap: wrap; padding: 40px 50px; border: 1px solid #e0e0e0;}
+.oneRoomPage .detailArea .optionBox li{padding: 0 30px; display: flex; flex-direction: column; align-items: center;}
+.oneRoomPage .detailArea .optionBox li img{margin-bottom: 20px;}
+
+/* 원룸 - 상세페이지 - 실거주자 리뷰 */
+.oneRoomPage .detailArea .reviewArea{position: relative;}
+.oneRoomPage .detailArea .reviewArea > button{display: flex; justify-content: center; align-items: center; width: 125px; height: 45px; border: 1px solid #d2d2d2; position: absolute; right: 0; top: -9px; font-size: 18px; font-weight: 700; color: #888888;}
+.oneRoomPage .detailArea .reviewArea > button::before{content: ''; width: 26px; height: 20px; background: url('../images/oneroom_detailBtn03.png') no-repeat center / cover;}
+.oneRoomPage .detailArea .reviewArea > ul{border: 1px solid #e0e0e0;}
+.oneRoomPage .detailArea .reviewArea > ul li{padding:20px 30px; background-color: #f5f5f5; display: flex; }
+.oneRoomPage .detailArea .reviewArea > ul li:not(:last-child){border-bottom: 1px solid #e0e0e0;}
+.oneRoomPage .detailArea .reviewArea > ul li > .imgBox{width: 60px; height: 60px; border-radius: 100%; border: 1px solid #b9b9b9;}
+.oneRoomPage .detailArea .reviewArea > ul li .textArea{height: 60px; flex: 1;display: flex; flex-wrap: wrap; align-items: center; align-content: space-between; margin: 0 15px; padding: 5px 0; box-sizing: border-box;}
+.oneRoomPage .detailArea .reviewArea > ul li .textArea b{font-size: 18px; font-weight: 700;}
+.oneRoomPage .detailArea .reviewArea > ul li .textArea time{font-size: 14px; color: #555555; margin-left: 13px;}
+.oneRoomPage .detailArea .reviewArea > ul li .textArea p{width: 100%;}
+.oneRoomPage .detailArea .reviewArea > ul li .textArea .scopeArea{margin-left: 13px;}
+.oneRoomPage .detailArea .reviewArea > ul li .imgArea{margin-left: auto;}
+.oneRoomPage .detailArea .reviewArea > ul li .imgArea .imgBox{width: 200px; height: 135px; border: 1px solid #b8b8b8;}
+
+/* 원룸 - 상세페이지 - 다른 방 둘러보기 */
+.oneRoomPage .detailArea .differentArea ul{display: flex; flex-wrap: wrap; justify-content: space-between;}
+.oneRoomPage .detailArea .differentArea ul li{width: 230px;}
+.oneRoomPage .detailArea .differentArea ul li .imgBox{width: 100%; height: 155px; border: 1px solid #b8b8b8; margin-bottom: 18px;}
+.oneRoomPage .detailArea .differentArea ul li p{margin-bottom: 15px;}
+.oneRoomPage .detailArea .differentArea ul li p strong{display: block; font-size: 20px; font-weight: 800; margin-bottom: 10px;}
+.oneRoomPage .detailArea .differentArea ul li small{display: block; font-size: 14px; color: #888888; line-height: 20px;}
+
+
+/* 원룸 - 등록 */
+.oneRoomPage .registrationArea fieldset:not(:last-of-type){margin-bottom: 80px;}
+.oneRoomPage .registrationArea fieldset legend{font-size: 26px; font-weight: 800; margin-bottom: 20px;}
+.oneRoomPage .registrationArea fieldset input[type="checkbox"]:not([class]) + label{display: inline-flex;}
+.oneRoomPage .registrationArea fieldset input[type="checkbox"]:not([class]) + label::before{content: ''; width: 18px; height: 18px; background-image: url('../images/chk01.png'); background-repeat: no-repeat; background-position: center; background-size: cover; margin-right: 10px;}
+.oneRoomPage .registrationArea fieldset input[type="checkbox"]:not([class]):checked + label::before{background-image: url('../images/chk01_active.png');}
+
+.oneRoomPage .registrationArea .inputArea > div:not(:last-child){margin-bottom: 40px;}
+.oneRoomPage .registrationArea .inputArea > div{border: 1px solid #e0e0e0;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div{display: flex; text-align: center;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div:not(:last-child){border-bottom: 1px solid #e0e0e0;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > label{width: 150px; line-height: 55px; color: #555555; background-color: #f0f0f0; border-right: 1px solid #e0e0e0;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div{flex: 1; padding: 7px; background-color: #f5f5f5; display: flex; align-items: center;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div input[type="radio"]{display: none;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div input[type="radio"] + label{width: 130px; line-height: 40px; border: 1px solid #cacaca; box-sizing: border-box; background-color: white;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div > input[type="radio"]:not(:last-child) + label{margin-right: 5px;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div input[type="radio"]:checked + label{color: white; font-weight: 800; background-color: #ff9900;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div .checkList{display: none;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div .checkList + label{width: 130px; line-height: 40px; border: 1px solid #cacaca; box-sizing: border-box; background-color: white;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div > .checkList:not(:last-child) + label{margin-right: 5px;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div .checkList:checked + label{color: white; font-weight: 800; background-color: #ff9900;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div input[type="text"]{width: 130px; line-height: 40px; border: 1px solid #cacaca; box-sizing: border-box; background-color: white; text-align: center;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div input[type="text"] ~ input[type="checkbox"]{margin-left: 30px;}
+.oneRoomPage .registrationArea .inputArea > div:not([class]) > div > div span{margin: 0 10px;}
+
+.oneRoomPage .registrationArea .inputArea .addrArea{display: flex; text-align: left;}
+.oneRoomPage .registrationArea .inputArea .addrArea > label{width: 150px; line-height: 55px; color: #555555; background-color: #f0f0f0; border-right: 1px solid #e0e0e0; display: flex; justify-content: center; align-items: center;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div{flex: 1; padding: 7px; background-color: #f5f5f5;  flex-wrap: wrap;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div input{width: 400px; height: 40px; border: 1px solid #cacaca; padding: 0 10px;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div div{}
+.oneRoomPage .registrationArea .inputArea .addrArea > div > *:not(:last-child){margin-bottom: 7px;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div .topArea{display: flex;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div .topArea button{width: 130px; height: 40px; background-color: black; color: white; margin-left: 5px;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div .centerArea{width: 535px; height: 90px; border: 1px solid #cacaca;; background-color: white; display: flex; flex-direction: column; justify-content: center; padding: 10px;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div .centerArea dl{display: flex;}
+.oneRoomPage .registrationArea .inputArea .addrArea > div .centerArea dl:not(:last-child){margin-bottom: 15px;}
+
+/* 원룸 - 등록 - 이미지 업로드*/
+.oneRoomPage .registrationArea .imgRegiBox{border: 1px solid #e0e0e0;}
+.oneRoomPage .registrationArea .imgRegiBox > div:not(:last-child){border-bottom: 1px solid #e0e0e0;}
+.oneRoomPage .registrationArea .imgRegiBox > .textArea{padding: 15px 20px; }
+.oneRoomPage .registrationArea .imgRegiBox > .textArea p{line-height: 28px;}
+
+.oneRoomPage .registrationArea .imgRegiBox > .fileArea{padding: 20px 10px;}
+.oneRoomPage .registrationArea .imgRegiBox > .fileArea > *{margin: 10px;}
+
+.oneRoomPage .registrationArea .imgRegiBox + div{border-width: 0 1px 1px 1px; border-style: solid; border-color: #e0e0e0; padding: 30px 0; text-align: center;}
+.oneRoomPage .registrationArea .imgRegiBox + div input[type="checkbox"]{display: none;}
+.oneRoomPage .registrationArea .imgRegiBox + div label{display: block; margin-bottom: 30px;}
+.oneRoomPage .registrationArea .imgRegiBox + div div{display: flex; justify-content: center;}
+.oneRoomPage .registrationArea .imgRegiBox + div div input:not(:last-of-type){margin-right: 10px;}
+.oneRoomPage .registrationArea .imgRegiBox + div div input{width: 125px; height: 45px; display: flex; justify-content: center; align-items: center; font-size: 18px; font-weight: 700;}
+.oneRoomPage .registrationArea .imgRegiBox + div div input[type="reset"]{border: 1px solid #d2d2d2; color: #888888; background-color: transparent;}
+.oneRoomPage .registrationArea .imgRegiBox + div div input[type="submit"]{background-color: black; color: white;}
