원룸 간격 수정

--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="subPage oneRoomPage">
-        <section class="oneRoomArea">
+        <section class="oneRoomArea" style="padding: 120px 0 70px">
             <h2 class="hidden">원룸</h2>
             <div class="contArea">
                 <div class="mapArea">
@@ -263,21 +263,6 @@
                 </a>
             </li>
             `
-
-            // return `
-            //         <a onclick="location.href=${info.id}">
-            //             <li>
-            //                 <div style="margin: 0 30px"><img width="80px" height="80ox" src="${info.main_img}"></div>
-            //                 <div>
-            //                     <p>
-            //                         <h3>${info.title}</h3>
-            //                         <span>${info.price}</span>
-            //                         <span>${info.space}</span>
-            //                     </p>
-            //                 </div>
-            //             </li>
-            //         </a>
-            //     `
         }
 
         let ai = {
