원룸 메인 여백 수정

--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="subPage oneRoomPage">
-        <section class="oneRoomArea" style="padding: 120px 0 70px">
+        <section class="oneRoomArea" style="padding: 120px 0 0 0">
             <h2 class="hidden">원룸</h2>
             <div class="contArea">
                 <div class="mapArea">
