chat 확인 모델 추가

--- a/templates/common/usedtrade_chat.html
+++ b/templates/common/usedtrade_chat.html
@@ -82,7 +82,9 @@
                         </form>
                     </div>
                 {% else %}
-                    <p>채팅방이 없습니다.</p>
+                    <div>
+                        <p>채팅방이 없습니다.</p>
+                    </div>
                 {% endif %}
 
             </div>
