--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -9,6 +9,7 @@
                         <td colspan="2">
                             <div>
                                 <strong>
+                                    {{ data.all }}
                                     월세 <b>200 / 40만원</b>
                                 </strong>
                             </div>
