--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -1,20 +1,161 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container">
-        <ul class="trade_ul">
-            {% for data in data %}
-                <li class="trade_li" onclick="location.href='{% url 'usedtrade:detail' data.id %}'">
-                    <div class="trade_image">
-                        <img src="{{ data.file_set.first.file.url }}"
-                             style="width: 200px; height: 120px;">
+    <div class="subPage usedTradePage">
+        <section class="usedTradeArea width1200">
+            <ul class="usedTradeBox fontCase01">
+                <li>
+                    <a href="">
+                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                            실시간 인기 중고 이미지
+                        </div>
+                        <p>
+                            <time>2시간전</time>
+                            아이패드 프로 11인치
+                            <strong>605,000원</strong>
+                        </p>
+                        <small>대구 중구 달서동</small>
+                    </a>
+                    <div class="iconBox">
+                        <div class="imgBox heartIcon">
+                            하트 아이콘
+                        </div>
+                        <span>
+                            10
+                        </span>
+                        <div class="imgBox mailIcon">
+                            메일 아이콘
+                        </div>
+                        <span>
+                            5
+                        </span>
                     </div>
-                    <div class="trade_content">{{ data.title }}</div>
-                    <div class="trade_price">{{ data.price }}원</div>
                 </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="container">
-        <button onclick="location.href='{% url 'usedtrade:create_post' %}'" class="btn btn-outline-secondary">글쓰기</button>
+                <li>
+                    <a href="">
+                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                            실시간 인기 중고 이미지
+                        </div>
+                        <p>
+                            <time>2시간전</time>
+                            아이패드 프로 11인치
+                            <strong>605,000원</strong>
+                        </p>
+                        <small>대구 중구 달서동</small>
+                    </a>
+                    <div class="iconBox">
+                        <div class="imgBox heartIcon">
+                            하트 아이콘
+                        </div>
+                        <span>
+                            10
+                        </span>
+                        <div class="imgBox mailIcon">
+                            메일 아이콘
+                        </div>
+                        <span>
+                            5
+                        </span>
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                            실시간 인기 중고 이미지
+                        </div>
+                        <p>
+                            <time>2시간전</time>
+                            아이패드 프로 11인치
+                            <strong>605,000원</strong>
+                        </p>
+                        <small>대구 중구 달서동</small>
+                    </a>
+                    <div class="iconBox">
+                        <div class="imgBox heartIcon">
+                            하트 아이콘
+                        </div>
+                        <span>
+                            10
+                        </span>
+                        <div class="imgBox mailIcon">
+                            메일 아이콘
+                        </div>
+                        <span>
+                            5
+                        </span>
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                            실시간 인기 중고 이미지
+                        </div>
+                        <p>
+                            <time>2시간전</time>
+                            아이패드 프로 11인치
+                            <strong>605,000원</strong>
+                        </p>
+                        <small>대구 중구 달서동</small>
+                    </a>
+                    <div class="iconBox">
+                        <div class="imgBox heartIcon">
+                            하트 아이콘
+                        </div>
+                        <span>
+                            10
+                        </span>
+                        <div class="imgBox mailIcon">
+                            메일 아이콘
+                        </div>
+                        <span>
+                            5
+                        </span>
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                            실시간 인기 중고 이미지
+                        </div>
+                        <p>
+                            <time>2시간전</time>
+                            아이패드 프로 11인치
+                            <strong>605,000원</strong>
+                        </p>
+                        <small>대구 중구 달서동</small>
+                    </a>
+                    <div class="iconBox">
+                        <div class="imgBox heartIcon">
+                            하트 아이콘
+                        </div>
+                        <span>
+                            10
+                        </span>
+                        <div class="imgBox mailIcon">
+                            메일 아이콘
+                        </div>
+                        <span>
+                            5
+                        </span>
+                    </div>
+                </li>
+            </ul>
+            <div class="pageBox">
+                <a href="#"><mark>&lt;</mark>이전</a>
+                <ol>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">6</a></li>
+                </ol>
+                <a href="#">다음<mark>&gt;</mark></a>
+                <button class="writeBtn">작성하기</button>
+            </div>
+            <div class="seachBox">
+                <input type="text">
+                <button></button>
+            </div>
+        </section>
     </div>
 {% endblock %}
